# swegram-v2

./: .gitignore  .pylintrc  Dockerfile  LICENSE  LICENSE.md  Loginpage.vue  README.md  app_run.py  backlog.md  docker-compose.yml  docker_build.sh  install.sh  key  main.py  manage.py  posgresql.md  pytest.ini  requirements-dev.txt  requirements.server.txt  requirements.txt  run.sh  run_server.py  setup.cfg  setup.py  setup.sh  swegram.code-workspace  tasks.py  test_progress.py  user.py  user.sh  user.vue  vetur.config.js  worknote.md
.github/workflows/: pylint.yml  release.yml  static_analysis.yml
build_dependencies/: README.md  get_efselab.py  install.sh  install_pandoc.py  install_udpipe.py  install_udpipe.sh  tools_conf.py
conf/: 127.0.0.1.conf  conf.md
doc/: swegram.html
docker/: Dockerfile
frontend/: .eslintrc.js  .gitignore  Dockerfile  Dockerfile.build  README.md  hours.txt  index.html  jsconfig.json  nginx.conf  package-lock.json  package.json  vite.config.js  vue.config.js  webpack-stats.json
frontend/src/: App.vue  Constants.js  main.js
nlp/converter/: pandoc.py
nlp/sv/: efselab.md  install_efselab.sh
resources/: README.md
resources/scripts/: initial.py
server/: config.py  models.py  pipeline.py  run.py
server/database/: handler.py
server/lib/: decorators.py  (+11 more)
src/: manage.py  settings.py
swegram/: urls.py  wsgi.py
swegram_django/: admin.py  load.py  models.py  urls.py  views.py
swegram_main/: apps.py  config.py  middleware.py  models.py  urls.py  version.py  views.py
tests/: README.md  corpus_download.sh  test_pipeine.py
(+279 files in other folders)
