[metadata]
name = my_package
version = attr: swegram_main.version.VERSION
author = Rex Ruan
description = description
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Framework :: Fastapi
    Programming Language :: Python :: 3